chore(env): add environment variables for Huggy OAuth integration

--- a/.env.example
+++ b/.env.example
@@ -62,4 +62,8 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+HUGGY_CLIENT_ID=
+HUGGY_CLIENT_SECRET=
+HUGGY_REDIRECT_URI=
+
 VITE_APP_NAME="${APP_NAME}"
