chore(env): add APP_KEY to .env.testing for test environment

--- a/.env.testing
+++ b/.env.testing
@@ -1,5 +1,6 @@
 # .env.testing
 APP_ENV=testing
+APP_KEY=base64:riTnrPV/fygkBshUt8CM1Py98WFjbL2AI36+/Lw3EqU=
 
 # SQLite para testes (muito mais rápido)
 DB_CONNECTION=sqlite
