--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   postgres:
     image: postgres:latest
     container_name: projeto_huggy_postgres
-    restart: always
+    restart: no
     ports:
       - "5432:5432"
     environment:
