chore(env): update env example

--- a/.env.example
+++ b/.env.example
@@ -20,14 +20,14 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=pgsql
+DB_HOST=127.0.0.1
+DB_PORT=5432
+DB_DATABASE=projeto-huggy
+DB_USERNAME=userhuggy
+DB_PASSWORD=userhuggy
 
-SESSION_DRIVER=database
+SESSION_DRIVER=file
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
@@ -47,14 +47,15 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
+MAIL_MAILER=smtp
 MAIL_SCHEME=null
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=tls  
+MAIL_FROM_ADDRESS=
+MAIL_FROM_NAME="Huggy Desafio"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -67,3 +68,16 @@ HUGGY_CLIENT_SECRET=
 HUGGY_REDIRECT_URI=
 
 VITE_APP_NAME="${APP_NAME}"
+
+HUGGY_CLIENT_ID=
+HUGGY_CLIENT_SECRET=
+HUGGY_REDIRECT_URI=https://ngrokurl/oauth/huggy/callback
+
+HUGGY_WEBHOOK_TOKEN=
+
+EXTERNAL_WEBHOOK_URL=https://webhook.site/a3ec697c-0ff0-4d22-8efc-4d1a8001b572
+
+TWILIO_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_PHONE_NUMBER=
+
